--- a/views/mixins/_storeForm.pug
+++ b/views/mixins/_storeForm.pug
@@ -1,13 +1,22 @@
 mixin storeForm(store = {})
-  form(action="/add" method="POST" class="card")
+  form(action=`/add/${store._id || ''}` method="POST" class="card")
     label(for="name") Name
-    input(type="text" name="name")
+    input(type="text" name="name" value=store.name)
     label(for="description") Description
-    textarea(name="description") 
+    textarea(name="description")= store.description
+    //- addres lat and lng
+    label(for="address") Address
+    input(type="text" name="location[address]" id="address" value=(store.location && store.location.address))
+    label(for="lng") Address Lng
+    input(type="text" name="location[coordinates][0]" id="lng" value=(store.location && store.location.coordinates[0]) requiered)
+    label(for="lat") Address lat
+    input(type="text" name="location[coordinates][1]" id="lat" value=(store.location && store.location.coordinates[1]) requiered)
+
     - const choices = ['Wifi', 'Vegetarian', 'Open Late', 'Familiy Friendly', 'Licnsed']
+    - const tags = store.tags || []
     ul.tags
       each choice in choices
         .tag.tag__choice
-          input(type="checkbox" id=choice value=choice name="tags")
+          input(type="checkbox" id=choice value=choice name="tags" checked=(tags.includes(choice)))
           label(for=choice) #{choice}
     input(type="submit" value="Save ➡️" class="button")
