--- a/public/sass/partials/_tag.scss
+++ b/public/sass/partials/_tag.scss
@@ -30,8 +30,8 @@
     }
   }
   &__link {
-    background:$yellow;
-    color:$black;
+    background: $yellow;
+    color: $black;
     display: flex;
     padding-left: 10px;
     clip-path: polygon(10px 0%, 100% 1%, 100% 100%, 10px 100%, 0% 50%);
@@ -45,11 +45,12 @@
   &__text {
     padding: 1rem 1rem;
     display: block;
+    font-size: 2rem;
   }
   &__count {
     padding: 1rem 1rem;
     background: white;
-    border-left: 3px solid rgba(0,0,0,0.1);
+    border-left: 3px solid rgba(0, 0, 0, 0.1);
     margin-right: -1px; /* ugh */
     background-clip: padding-box;
   }
