--- a/views/tags.pug
+++ b/views/tags.pug
@@ -6,11 +6,11 @@ block content
   .inner
     h2 #{tag || 'Tags'}
     ul.tags
-      each tag in tags
+      each t in tags
         li.tag
-          a.tag__link(href=`/tags/${tag._id}` class=(tag._id === tag ? 'tag__link--active' : ''))
-            span.tag__text= tag._id
-            span.tag__count= tag.count
+          a.tag__link(href=`/tags/${t._id}` class=(t._id === tag ? 'tag__link--active' : ''))
+            span.tag__text= t._id
+            span.tag__count= t.count
     .stores
       each store in stores
         +storeCard(store)
